frontend_tests/negative/unaddressable_array_call/go.mod
module example.com/renvotests/negative/unaddressable_array_call

go 1.25
